# blackice

./: .gitignore  .gitmodules  INTEGRATION.md  README.md  RESOURCES.md  pyproject.toml
.claude/hooks/logs/: chat.json  post_tool_use.json  pre_tool_use.json  stop.json  sub_agent_stop.json
blackice/: __init__.py  cli.py
docs/: ARCHITECTURE.md
examples/: quick_start.py
integrations/: dispatcher.py
seans-path/: README.md
tests/: __init__.py  test_smoke.py
your-path/: README.md
your-path/.claude/hooks/logs/: post_tool_use.json  pre_tool_use.json
your-path/agentic_coding_flywheel_setup/: acfs.manifest.yaml
your-path/agentic_coding_flywheel_setup/.beads/: issues.jsonl
your-path/agentic_coding_flywheel_setup/.github/workflows/: checksum-monitor.yml  installer.yml
your-path/agentic_coding_flywheel_setup/acfs/zsh/: acfs.zshrc
your-path/agentic_coding_flywheel_setup/docs/: manifest-gap-analysis.md
your-path/agentic_coding_flywheel_setup/scripts/: preflight.sh
your-path/agentic_coding_flywheel_setup/scripts/lib/: agents.sh  cli_tools.sh  doctor.sh  error_tracking.sh  errors.sh  info.sh  languages.sh  logging.sh  session.sh  smoke_test.sh  tailscale.sh  test_install_helpers.sh  test_selection.sh  ubuntu_upgrade.sh
your-path/evogit/: .gitignore
your-path/evogit/design_doc/: readme.md
your-path/evogit/static/: EvoGit_cover_dark.avif  animated_evogit_dark_text.avif  animated_evogit_light_text.avif
your-path/get-shit-done/: README.md
your-path/oh-my-opencode/signatures/: cla.json
your-path/speckit/neon-compliance-demo/: CODE_REVIEW.md
your-path/your-path/agentic_coding_flywheel_setup/: CHANGELOG.md  README.md  install.sh
your-path/your-path/evogit/: README.md  evox_extension.py
your-path/your-path/get-shit-done/: package.json
your-path/your-path/oh-my-opencode/: .gitignore  CONTRIBUTING.md
(+120 files in other folders)
